fix(zen-table): make zen-text truncate work with tables

--- a/src/components/zen-table-cell/zen-table-cell.scss
+++ b/src/components/zen-table-cell/zen-table-cell.scss
@@ -2,6 +2,7 @@
 
 :host {
   display: flex;
+  min-width: 0;
   position: relative;
   align-items: center;
   height: 3.5rem;
